<resources>
    <string name="app_name">KAaNE [AE]</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KAaNE [AE]</string>
    <string name="nav_header_subtitle">The KTaNE assistant program for Androids</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="generic_ok">OK</string>
    <string name="generic_clear">CLEAR</string>
    <string name="generic_lc_clear">Clear</string>
    <string name="generic_next">NEXT</string>
    <string name="generic_lc_next">Next</string>
    <string name="generic_reset">RESET</string>
    <string name="generic_lc_reset">Reset</string>
    <string name="title_activity_settings">Settings</string>
    <string name="options_header_log">Log</string>
    <string name="options_log_off">The log can still be viewed at /kaane-ae/log.log</string>
    <string name="options_log">Show log menu option</string>
    <string name="options_excessive_log">Enable Excessive Logging</string>
    <string name="options_excessive_log_summary">Log any detail possible (What a variable is currently, what was selected, etc.) These will show up with the prefix [EXCLOG]</string>
    <string name="options_header_appearance">Appearance</string>
    <string name="options_theme">Use dark theme (experimental)</string>
    <string name="options_theme_summary">Changing this will restart the app.</string>
    <string name="options_header_about">About</string>
    <string name="options_version_title">Version</string>
    <string name="options_version">Beta [β] v0.5.1</string>
    <string name="options_github">GitHub Repo</string>
    <string name="options_github_url">https://github.com/ggtylerr/KAaNE-AE-</string>
    <string name="options_discord">Discord Server</string>
    <string name="options_discord_url">https://discord.gg/SdaFUAm</string>
    <string name="options_wiki">Official Wiki</string>
    <string name="options_wiki_url">https://kaane.miraheze.org/</string>
    <string name="options_blog">Development Blog</string>
    <string name="options_blog_summary">Also contains other projects!</string>
    <string name="options_blog_url">https://tylersdump.wordpress.com/</string>
    <string name="options_storage">Storage</string>
    <string name="options_storage_location">Location</string>
    <string name="options_storage_location_off">Files generated will be saved in the internal app storage.</string>
    <string name="options_storage_location_on">Files generated will be saved in /Downloads/kaane-ae/</string>
    <string name="menu_home">Home</string>
    <string name="menu_bomb_settings">Bomb Settings</string>
    <string name="menu_vanilla">Vanilla</string>
    <string name="menu_vanilla_wires">Wires</string>
    <string name="menu_vanilla_button">The Button</string>
    <string name="menu_vanilla_keypad">Keypad</string>
    <string name="menu_vanilla_simon_says">Simon Says</string>
    <string name="menu_vanilla_whos_on_first">Who\'s On First</string>
    <string name="menu_vanilla_memory">Memory</string>
    <string name="menu_vanilla_morse_code">Morse Code</string>
    <string name="menu_vanilla_complicated_wires">Complicated Wires</string>
    <string name="menu_vanilla_wire_sequences">Wire Sequences</string>
    <string name="menu_vanilla_maze">Maze</string>
    <string name="menu_vanilla_password">Password</string>
    <string name="menu_vanilla_gas">Venting Gas</string>
    <string name="menu_vanilla_discharge">Capacitor Discharge</string>
    <string name="menu_vanilla_knob">Knob</string>
    <string name="menu_mod">Mod</string>
    <string name="menu_mod_101_dalmatians">101 Dalmatians</string>
    <string name="menu_mod_3d_maze">3D Maze</string>
    <string name="menu_mod_3d_tunnels">3D Tunnels</string>
    <string name="menu_mod_aa">aa</string>
    <string name="menu_mod_accumulation">Accumulation</string>
    <string name="menu_mod_adjacent_letters">Adjacent Letters</string>
    <string name="menu_mod_adv_venting_gas">Adv. Venting Gas</string>
    <string name="menu_mod_adventure_game">Adventure Game</string>
    <string name="menu_mod_alchemy">Alchemy</string>
    <string name="menu_mod_atc">Air Traffic Controller</string>
    <string name="menu_dev">Developer Screens</string>
    <string name="menu_dev_log">Log</string>
    <string name="home_welcome">Welcome to the beta of KAaNE [AE]!</string>
    <string name="home_string">
        If you haven\'t already, please allow storage permissions. You can do that by pressing the \"Request Storage Permissions\" button above.\n\n
        KAaNE will only use setting files and log files in Downloads/kaane-ae/. No other files will be used.
    </string>
    <string name="home_request_perms">Request Storage Permissions</string>
    <string name="bomb_settings_ind">Indicators</string>
    <string name="bomb_settings_ind_bob">BOB</string>
    <string name="bomb_settings_ind_car">CAR</string>
    <string name="bomb_settings_ind_clr">CLR</string>
    <string name="bomb_settings_ind_frk">FRK</string>
    <string name="bomb_settings_ind_frq">FRQ</string>
    <string name="bomb_settings_ind_ind">IND</string>
    <string name="bomb_settings_ind_msa">MSA</string>
    <string name="bomb_settings_ind_nsa">NSA</string>
    <string name="bomb_settings_ind_sig">SIG</string>
    <string name="bomb_settings_ind_snd">SND</string>
    <string name="bomb_settings_ind_trn">TRN</string>
    <string name="bomb_settings_ind_is_lit">LIT</string>
    <string name="bomb_settings_bat_slash_port">Batteries/Ports</string>
    <string name="bomb_settings_hint_number">##</string>
    <string name="bomb_settings_hint_add">Add</string>
    <string name="bomb_settings_hint_remove">Remove</string>
    <string name="bomb_settings_bat_aa">Total AAs</string>
    <string name="bomb_settings_bat_d">Total Ds</string>
    <string name="bomb_settings_port_dvid">DVI-D</string>
    <string name="bomb_settings_port_parallel">Parallel</string>
    <string name="bomb_settings_port_ps2">PS/2</string>
    <string name="bomb_settings_port_rj45">RJ-45</string>
    <string name="bomb_settings_port_serial">Serial</string>
    <string name="bomb_settings_port_stereoRCA">Stereo RCA</string>
    <string name="bomb_settings_other">Other Settings</string>
    <string name="bomb_settings_plates">Port Plates</string>
    <string name="bomb_settings_mod_ind">Mod Indicators</string>
    <string name="bomb_settings_mod_port">Mod Ports</string>
    <string name="bomb_settings_modules">Modules</string>
    <string name="bomb_settings_serial_number">Serial Number</string>
    <string name="bomb_settings_save">Save</string>
    <string name="bomb_settings_clear">Clear</string>
    <string-array name="vanilla_wires_colors">
        <item>None</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string name="vanilla_wires_w1">1st wire</string>
    <string name="vanilla_wires_w2">2nd wire</string>
    <string name="vanilla_wires_w3">3rd wire</string>
    <string name="vanilla_wires_w4">4th wire</string>
    <string name="vanilla_wires_w5">5th wire</string>
    <string name="vanilla_wires_w6">6th wire</string>
    <string name="vanilla_wires_cut_msg">Cut the %1$s wire.</string>
    <string name="vanilla_wires_invalid">Needs to be >= 3 wires.</string>
    <string name="vanilla_button_color">Color</string>
    <string-array name="vanilla_button_instructions">
        <item>Abort</item>
        <item>Detonate</item>
        <item>Hold</item>
        <item>Press</item>
    </string-array>
    <string name="vanilla_button_press">Press and immediately release.</string>
    <string name="vanilla_button_rahb">Hold the button. Depending on the color of the LED strip, release the button when the number shows up in the bomb timer. It can be in any position.
    \nBlue: 4\nYellow: 5\nOther: 1</string>
    <string-array name="vanilla_simon_says_strikes">
        <item>Zero</item>
        <item>One</item>
        <item>Two+</item>
    </string-array>
    <string-array name="vanilla_whos_on_first_display">
        <item />
        <item>BLANK</item>
        <item>C</item>
        <item>CEE</item>
        <item>DISPLAY</item>
        <item>FIRST</item>
        <item>HOLD ON</item>
        <item>LEAD</item>
        <item>LED</item>
        <item>LEED</item>
        <item>NO</item>
        <item>NOTHING</item>
        <item>OKAY</item>
        <item>READ</item>
        <item>RED</item>
        <item>REED</item>
        <item>SAYS</item>
        <item>SEE</item>
        <item>THEIR</item>
        <item>THERE</item>
        <item>THEY ARE</item>
        <item>THEY\'RE</item>
        <item>UR</item>
        <item>YES</item>
        <item>YOU</item>
        <item>YOU ARE</item>
        <item>YOU\'RE</item>
        <item>YOUR</item>
    </string-array>
    <string-array name="vanilla_whos_on_first_position">
        <item>BLANK</item>
        <item>DONE</item>
        <item>FIRST</item>
        <item>HOLD</item>
        <item>LEFT</item>
        <item>LIKE</item>
        <item>MIDDLE</item>
        <item>NEXT</item>
        <item>NO</item>
        <item>NOTHING</item>
        <item>OKAY</item>
        <item>PRESS</item>
        <item>READY</item>
        <item>RIGHT</item>
        <item>SURE</item>
        <item>U</item>
        <item>UH HUH</item>
        <item>UH UH</item>
        <item>UHHH</item>
        <item>UR</item>
        <item>WAIT</item>
        <item>WHAT</item>
        <item>WHAT?</item>
        <item>YES</item>
        <item>YOU</item>
        <item>YOU ARE</item>
        <item>YOU\'RE</item>
        <item>YOUR</item>
    </string-array>
    <string name="vanilla_whos_on_first_out_blank">WAIT, RIGHT, OKAY, MIDDLE, BLANK</string>
    <string name="vanilla_whos_on_first_out_done">SURE, UH HUH, NEXT, WHAT?, YOUR, UR, YOU\'RE, HOLD, LIKE, YOU, U, YOU ARE, UH UH, DONE</string>
    <string name="vanilla_whos_on_first_out_first">LEFT, OKAY, YES, MIDDLE, NO, RIGHT, NOTHING, UHHH, WAIT, READY, BLANK, WHAT, PRESS, FIRST</string>
    <string name="vanilla_whos_on_first_out_hold">YOU ARE, U, DONE, UH UH, YOU, UR, SURE, WHAT?, YOU\'RE, NEXT, HOLD</string>
    <string name="vanilla_whos_on_first_out_left">RIGHT, LEFT</string>
    <string name="vanilla_whos_on_first_out_like">YOU\'RE, NEXT, U, UR, HOLD, DONE, UH UH, WHAT?, UH HUH, YOU, LIKE</string>
    <string name="vanilla_whos_on_first_out_middle">BLANK, READY, OKAY, WHAT, NOTHING, PRESS, NO, WAIT, LEFT, MIDDLE</string>
    <string name="vanilla_whos_on_first_out_next">WHAT?, UH HUH, UH UH, YOUR, HOLD, SURE, NEXT</string>
    <string name="vanilla_whos_on_first_out_no">BLANK, UHH, WAIT, FIRST, WHAT, READY, RIGHT, YES, NOTHING, LEFT, PRESS, OKAY, NO</string>
    <string name="vanilla_whos_on_first_out_nothing">UHHH, RIGHT, OKAY, MIDDLE, YES, BLANK, NO, PRESS, LEFT, WHAT, WAIT, FIRST, NOTHING</string>
    <string name="vanilla_whos_on_first_out_okay">MIDDLE, NO, FIRST, YES, UHH, NOTHING, WAIT, OKAY</string>
    <string name="vanilla_whos_on_first_out_press">RIGHT, MIDDLE, YES, READY, PRESS</string>
    <string name="vanilla_whos_on_first_out_ready">YES, OKAY, WHAT, MIDDLE, LEFT, PRESS, RIGHT, BLANK, READY</string>
    <string name="vanilla_complicated_wires_red">Red</string>
    <string name="vanilla_complicated_wires_blue">Blue</string>
    <string name="vanilla_complicated_wires_star">Star</string>
    <string name="vanilla_complicated_wires_led">Led</string>
    <string name="mod_101_dalmatians_3_dots">MARK 3 DOTS</string>
    <string name="mod_101_dalmatians_4_dots">MARK 4 DOTS</string>
    <string name="mod_101_dalmatians_all">MARK ALL</string>
    <string name="mod_101_dalmatians_none">UNMARK</string>
</resources>