<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mod_101_dalmatians_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/mod_101_dalmatians_3_dots_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a101_dalmatians_list" />

    <Button
        android:id="@+id/mod_101_dalmatians_3_dots_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mod_101_dalmatians_3_dots"
        app:layout_constraintBottom_toTopOf="@+id/mod_101_dalmatians_all"
        app:layout_constraintEnd_toStartOf="@+id/mod_101_dalmatians_4_dots_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mod_101_dalmatians_4_dots_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mod_101_dalmatians_4_dots"
        app:layout_constraintBottom_toTopOf="@+id/mod_101_dalmatians_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mod_101_dalmatians_3_dots_btn" />

    <Button
        android:id="@+id/mod_101_dalmatians_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mod_101_dalmatians_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mod_101_dalmatians_none"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mod_101_dalmatians_none"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mod_101_dalmatians_none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mod_101_dalmatians_all" />
</androidx.constraintlayout.widget.ConstraintLayout>