<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/vanilla_whos_on_first_display_spin"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/vanilla_whos_on_first_display"
        app:layout_constraintBottom_toBottomOf="@+id/vanilla_whos_on_first_display_button"
        app:layout_constraintEnd_toStartOf="@+id/vanilla_whos_on_first_display_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vanilla_whos_on_first_display_button" />

    <TextView
        android:id="@+id/vanilla_whos_on_first_display_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vanilla_whos_on_first_display"
        app:layout_constraintBottom_toBottomOf="@+id/vanilla_whos_on_first_display_spin"
        app:layout_constraintEnd_toStartOf="@+id/vanilla_whos_on_first_display_button"
        app:layout_constraintStart_toEndOf="@+id/vanilla_whos_on_first_display_spin"
        app:layout_constraintTop_toTopOf="@+id/vanilla_whos_on_first_display_spin"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/vanilla_whos_on_first_display_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/generic_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vanilla_whos_on_first_display_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/vanilla_whos_on_first_position_spin"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/vanilla_whos_on_first_position"
        app:layout_constraintBottom_toBottomOf="@+id/vanilla_whos_on_first_position_button"
        app:layout_constraintEnd_toStartOf="@+id/vanilla_whos_on_first_position_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vanilla_whos_on_first_position_button" />

    <TextView
        android:id="@+id/vanilla_whos_on_first_position_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vanilla_whos_on_first_position"
        app:layout_constraintBottom_toBottomOf="@+id/vanilla_whos_on_first_position_spin"
        app:layout_constraintEnd_toStartOf="@+id/vanilla_whos_on_first_position_button"
        app:layout_constraintStart_toEndOf="@+id/vanilla_whos_on_first_position_spin"
        app:layout_constraintTop_toTopOf="@+id/vanilla_whos_on_first_position_spin" />

    <Button
        android:id="@+id/vanilla_whos_on_first_position_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/generic_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vanilla_whos_on_first_display_button" />

    <TextView
        android:id="@+id/vanilla_whos_on_first_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vanilla_whos_on_first_position_button" />
</androidx.constraintlayout.widget.ConstraintLayout>